fix: slider add overflow hidden

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Lato', sans-serif;  
+    
 }
 
 .wrapper {
@@ -81,14 +82,13 @@ a {
     content: ""; 
 }
 
-
 .slide {
     position: relative;
 }
 
 .wrapper-slider {
     position: relative;
-    height: 594px;
+    overflow: hidden; 
 }
 
 .background {
@@ -193,7 +193,7 @@ a {
 .next {
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 1020px;
 }
 
 
